Adjust gn and ifdefs to make Perfetto available

Chrome has seven #ifdefs that decide whether Perfetto tracing is
available or not. This change consolidates those into two and then
enables Perfetto on Windows.

This change also updates two .gn files to enable Perfetto.

This change makes no difference unless the command-line option
--enable-features=TracingPerfettoBackend is specified.

Note that this change will fail to run unless the Assert in Angle's
AddTraceEvent function in event_tracer.cpp is removed. This is
being investigated.

Bug: 844421
Change-Id: Ia978eb69bed77bda68202fdbec7a306fdb9886bc
Reviewed-on: https://chromium-review.googlesource.com/1064371
Commit-Queue: oysteine <oysteine@chromium.org>
Reviewed-by: oysteine <oysteine@chromium.org>
Reviewed-by: Primiano Tucci <primiano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561556}
Former-commit-id: 89d0b86de2e6a79a8ddcf04a5c1393ca876705bd