services/tracing/tracing_service.h
@@ -18,6 +18,11 @@
 #include "services/tracing/agent_registry.h"
 #include "services/tracing/coordinator.h"
 
+#if defined(OS_ANDROID) || defined(OS_LINUX) || defined(OS_MACOSX) || \
+    defined(OS_WIN)
+#define PERFETTO_SERVICE_AVAILABLE
+#endif
+
 namespace tracing {
 
 class PerfettoTracingCoordinator;
@@ -50,7 +55,7 @@ class TracingService : public service_manager::Service {
   std::unique_ptr<Coordinator> tracing_coordinator_;
   std::unique_ptr<service_manager::ServiceContextRefFactory> ref_factory_;
 
-#if defined(OS_ANDROID) || defined(OS_LINUX) || defined(OS_MACOSX)
+#if defined(PERFETTO_SERVICE_AVAILABLE)
   std::unique_ptr<tracing::PerfettoService> perfetto_service_;
   std::unique_ptr<PerfettoTracingCoordinator> perfetto_tracing_coordinator_;
 #endif
